# CAA

./: .gitignore  ANALISE_FINAL_PROJETO.md  CHANGELOG.md  CHECKLIST_RESULTADO.md  CODE_STYLE.md  CORRECOES_FINAIS.md  CORRECOES_REALIZADAS.md  DEVELOPMENT_GUIDELINES.md  INSTALL.md  LICENSE  PROJECT_SUMMARY.md  README.md  TECHNICAL_DOCUMENTATION.md  VERSION_1.2_PLAN.md  VERSION_1.2_SUMMARY.md  VERSION_1.3_SUMMARY.md  VERSION_1.4_SUMMARY.md  VERSION_1.5_SUMMARY.md  VERSION_1.7_BUGFIX_PLAN.md  VERSION_1.7_BUGFIX_SUMMARY.md  build_rust.py  check_versioning.py  config.py  demo.py  docker-compose.yml  example_usage.py  fix_imports.py  fix_variables.py  main.py  pyproject.toml  requirements.txt  run_scenarios.py  run_tests.py  setup.cfg  setup.py  setup_new.py  setup_old.py  test_v1_6.py  test_v1_7.py  test_version.py  (+1 more)
ai-engine/: Cargo.toml  Dockerfile
ai-engine/src/: lib.rs
ai-engine/src/learning/: dqn.rs
backend/: Dockerfile  package.json
backend/src/: server.ts
backend/src/swagger/: swagger.yaml
database/: init.sql
examples/: advanced_ai_example.py  rust_integration_demo.py
frontend/: .gitignore  .prettierignore  Dockerfile  README.md  docker-compose.yml  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/: site.webmanifest  sw.js
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/components/: 3DVisualization.tsx  Sidebar.tsx  index.ts
frontend/src/hooks/: index.ts
frontend/src/pages/: Dashboard.tsx
frontend/src/types/: index.ts
frontend/src/utils/: index.ts
microservices/: go.mod
microservices/agent-service/: main.go
src/: __init__.py  __version__.py  main_v1_6.py  main_v1_7.py
src/agents/: __init__.py  base_agent.py  business_agent.py  citizen_agent.py  government_agent.py  infrastructure_agent.py
src/ai/: __init__.py  advanced_dqn.py  collective_learning.py
src/ai/advanced_models/: __init__.py  ai_model_manager.py  gan_models.py  lstm_models.py  reinforcement_learning.py  transformer_models.py
src/analytics/: __init__.py  alert_system.py  dashboard_manager.py  metrics_analyzer.py  performance_analyzer.py  report_generator.py
src/api/: __init__.py  fastapi_app.py
src/config/: v1_6_config.py  v1_7_config.py
src/database/: __init__.py  database_manager.py
src/environment/: __init__.py  city_environment.py  dynamic_events.py
src/infrastructure/docker/: Dockerfile  docker-compose.yml
src/infrastructure/kubernetes/: configmap.yaml  namespace.yaml
src/integrations/: __init__.py  database_connector.py  external_apis.py  iot_connector.py  webhook_manager.py
src/logging/: __init__.py  advanced_logger.py
src/mlops/: __init__.py  experiment_tracker.py  model_manager.py  model_monitor.py  pipeline_manager.py
src/monitoring/: __init__.py  alerts.py  metrics.py
src/optimization/: advanced_optimizer.py  base_optimizer.py  performance_optimizer.py
src/realtime/: __init__.py  event_sourcing.py  websocket_server.py
src/rust_engine/: Cargo.toml
src/rust_engine/python/: __init__.py  fallback_engine.py  performance_monitor.py  rust_simulation_wrapper.py
src/rust_engine/src/: lib.rs
src/rust_engine/src/agents/: mod.rs
src/rust_engine/src/optimization/: mod.rs
src/rust_engine/src/simulation/: mod.rs
src/rust_engine/src/utils/: mod.rs
src/scenarios/: __init__.py  advanced_scenarios.py  scenario_manager.py
src/security/: __init__.py  audit.py  auth.py  encryption.py  rbac.py
src/visualization/: __init__.py  advanced_3d_dashboard.py  dashboard.py
tests/: __init__.py  test_advanced_dqn.py  test_advanced_optimizer.py
(+11 files in other folders)
